list search js function

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -60,6 +60,8 @@
                                 </span>
                             </div>
                         </form>
+                        <div class="alert alert-danger search-alert">
+                        </div>
                     </div>
             </div>
 
@@ -79,124 +81,124 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr data-code="101">
+                            <tr data-id="1" data-code="101">
                                 <td scope="row"></td>
                                 <td>نگار</td>
                                 <td>۱۰۱</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="102">
+                            <tr data-id="2" data-code="102">
                                 <td scope="row"></td>
                                 <td>جعفر</td>
                                 <td>۱۰۲</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="103">
+                            <tr data-id="3" data-code="103">
                                 <td scope="row"></td>
                                 <td>محمد</td>
                                 <td>۱۰۳</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="104">
+                            <tr data-id="4" data-code="104">
                                 <td scope="row"></td>
                                 <td>آیدا</td>
                                 <td>۱۰۴</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="105">
+                            <tr data-id="5" data-code="105">
                                 <td scope="row"></td>
                                 <td>رضوان</td>
                                 <td>۱۰۵</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="106">
+                            <tr data-id="6" data-code="106">
                                 <td scope="row"></td>
                                 <td>حسام</td>
                                 <td>۱۰۶</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="107">
+                            <tr data-id="7" data-code="107">
                                 <td scope="row"></td>
                                 <td>کیوان</td>
                                 <td>۱۰۷</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
-                            <tr data-code="108">
+                            <tr data-id="8" data-code="108">
                                 <td scope="row"></td>
                                 <td>مونا</td>
                                 <td>۱۰۸</td>
                                 <td>خانواده</td>
-                                <td>
+                                <td class="td-name">
                                     <input type="text" class="form-control table-input--name">
                                 </td>
-                                <td>
+                                <td class="td-lottery-code">
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" type="submit" name="submit">ثبت ورود</button>
+                                    <button class="btn btn-success" name="enter">ثبت ورود</button>
                                 </td>
                             </tr>
                         </tbody>
