editable table rows
row can be edited
class of entered row changes
color classes added to rows
font size increased

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -81,64 +81,76 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr data-id="1" data-code="101">
+                            <tr class="text-danger" data-id="1" data-code="101">
                                 <td scope="row"></td>
                                 <td>نگار</td>
                                 <td>۱۰۱</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
-                            <tr data-id="2" data-code="102">
+                            <tr class="text-warning" data-id="2" data-code="102">
                                 <td scope="row"></td>
                                 <td>جعفر</td>
                                 <td>۱۰۲</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
-                            <tr data-id="3" data-code="103">
+                            <tr class="text-info" data-id="3" data-code="103">
                                 <td scope="row"></td>
                                 <td>محمد</td>
                                 <td>۱۰۳</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
-                            <tr data-id="4" data-code="104">
+                            <tr class="text-success" data-id="4" data-code="104">
                                 <td scope="row"></td>
                                 <td>آیدا</td>
                                 <td>۱۰۴</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
                             <tr data-id="5" data-code="105">
@@ -147,13 +159,16 @@
                                 <td>۱۰۵</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
                             <tr data-id="6" data-code="106">
@@ -162,13 +177,16 @@
                                 <td>۱۰۶</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
                             <tr data-id="7" data-code="107">
@@ -177,13 +195,16 @@
                                 <td>۱۰۷</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
                             <tr data-id="8" data-code="108">
@@ -192,13 +213,16 @@
                                 <td>۱۰۸</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
+                                    <span style="display: none;"></span>
                                     <input type="text" class="form-control table-input--name">
                                 </td>
                                 <td class="td-lottery-code">
+                                    <span style="display: none;"></span>
                                     <input type="number" class="form-control table-input--code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                    <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
                             </tr>
                         </tbody>
