color classes will be added

--- a/ehda-list/index.html
+++ b/ehda-list/index.html
@@ -81,18 +81,18 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="text-danger" data-id="1" data-code="101">
+                            <!--<tr class="text-danger" data-id="1" data-code="101">
                                 <td scope="row"></td>
                                 <td>نگار</td>
                                 <td>۱۰۱</td>
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -106,11 +106,11 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -124,11 +124,11 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -142,11 +142,11 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -160,11 +160,11 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -178,11 +178,11 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -196,11 +196,11 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
@@ -214,17 +214,40 @@
                                 <td>خانواده</td>
                                 <td class="td-name">
                                     <span style="display: none;"></span>
-                                    <input type="text" class="form-control table-input--name">
+                                    <input type="text" class="form-control table-input&#45;&#45;name">
                                 </td>
                                 <td class="td-lottery-code">
                                     <span style="display: none;"></span>
-                                    <input type="number" class="form-control table-input--code">
+                                    <input type="number" class="form-control table-input&#45;&#45;code">
                                 </td>
                                 <td>
                                     <button class="btn btn-success" name="enter">ثبت ورود</button>
                                     <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
                                 </td>
-                            </tr>
+                            </tr>-->
+
+                            <!-- table row template -->
+                            <script id="trtemplate" type="text/x-handlebars-template">
+                                <tr class="{{class}}" data-id="{{id}}" data-code="{{inviteNum}}">
+                                    <td scope="row"></td>
+                                    <td>{{name}}</td>
+                                    <td>{{inviteNumFa}}</td>
+                                    <td>{{inviteType}}</td>
+                                    <td class="td-name">
+                                        <span style="display: none;"></span>
+                                        <input type="text" class="form-control table-input--name">
+                                    </td>
+                                    <td class="td-lottery-code">
+                                        <span style="display: none;"></span>
+                                        <input type="number" class="form-control table-input--code">
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-success" name="enter">ثبت ورود</button>
+                                        <button class="btn btn-danger" name="exit" style="display: none;">ویرایش</button>
+                                    </td>
+                                </tr>
+                            </script>
+
                         </tbody>
                     </table>
                 </div>
@@ -243,6 +266,11 @@
 
 <!-- Bootstrap.js -->
 <script src="public/assets/libs/bootstrap/bootstrap.min.js"></script>
+
+<!-- handlebars -->
+<script src="public/assets/libs/handlebars/handlebars-v4.0.11.js"></script>
+
+
 
 <!-- Custom js -->
 <script src="public/assets/js/app.js"></script>
